# ugc_sprint_2

./: .gitignore  Makefile  README.md  docker-compose-dev.yml  docker-compose-mongo.yaml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
benchmark/mongo/: docker-compose.yaml  mongo_benchmark.ipynb
benchmark/mongo/script/: init_db.js
docs/: asis.puml  tobe.puml
etl/: Dockerfile  main.py  pyproject.toml
etl/etl_core/: config.py
etl/etl_db/: kafka.py
etl/etl_models/: base.py  kafka.py  mongo.py  state.py
etl/etl_svc/: etl.py  state.py
kafka/: Dockerfile
logging/: logstash.conf
mongo/: init_mongocfg1.js  init_mongors1n1.js  init_mongors2n1.js  init_mongos1.js
nginx/: nginx.conf
nginx/site_conf/: site.conf
ugc_api/: .env.dev  Dockerfile  main.py  pyproject.toml
ugc_api/api/v1/: __init__.py  bookmarks.py  film_timestamp.py  like.py  review.py
ugc_api/core/: config.py  spammer.py
ugc_api/db/: kafka.py  mongo.py
ugc_api/models/: base.py  body.py  response.py
ugc_api/svc/: content_getter.py  content_logic.py  event_producer.py  event_sendler.py  user_parser.py
