[tool.poetry]
name = "ugc_sprint_2_g"
version = "0.1.0"
description = ""
authors = ["Vladimir Klychnikov <v.klychnikov@jsa-group.ru>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
